<resources>
    <string name="app_name">AndroidEnglisStaff</string>
    <string name="start_res">Start</string>
    <string name="vocab_res">Vocab</string>
    <string name="exit_res">Exit</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer</string>
    <string name="start">Back</string>
    <string name="back_button">Back</string>
    <string name="score">Az elért pontszámod:</string>
    <string name="back">Back</string>
    <string name="engame">End Game</string>
    <string name="name">Player Name:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
